--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ branches:
     - /^(.*\/)?ci-.*$/
     - /^feature\//
 build_script:
-  - build.cmd --quiet verify
+  - build.cmd
 clone_depth: 1
 test: off
 deploy: off
